Fix horizontal scrolling prevention

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,8 @@
+html {
+  overflow-x: hidden;
+  margin: 0 auto;
+  padding: 0;
+}
 body {
   --background_main: rgba(210,195,190,0.75);
   --background_transparent: rgba(232, 232, 232, 0);
@@ -20,6 +25,9 @@ body {
   height: 100vh;
   font-size: 1vh + 0.5vw;
   overflow-x: hidden;
+  width: 100vw;
+  margin: 0 auto;
+  position:relative;
  }
  .photo {
   position: absolute;
